fix previous and next button on mobile

--- a/assets/css/3-sections/_experiences.sass
+++ b/assets/css/3-sections/_experiences.sass
@@ -65,7 +65,7 @@
     .timeline-year
       display: block
       font-style: italic
-      font-size: 30px
+      font-size: 26px
       margin-bottom: 50px
       -webkit-transform: translate3d(20px, 0, 0)
       transform: translate3d(20px, 0, 0)
@@ -75,7 +75,7 @@
       color: $gold
     .timeline-title
       font-weight: 800
-      font-size: 34px
+      font-size: 30px
       margin: 0 0 30px
       opacity: 0
       -webkit-transform: translate3d(20px, 0, 0)
@@ -151,7 +151,7 @@
       transform: scale(1)
   .swiper-button-next
     background-size: 20px 20px
-    //top: 10%
+    top: 14%
     width: 20px
     height: 20px
     margin-top: 0
@@ -159,7 +159,7 @@
     transition: .2s
   .swiper-button-prev
     background-size: 20px 20px
-    top: 10%
+    top: 14%
     width: 20px
     height: 20px
     margin-top: 0
@@ -196,9 +196,9 @@
     .swiper-slide
       .timeline-year
         margin-bottom: 0
-        font-size: 26px
+        font-size: 30px
       .timeline-title
-        font-size: 32px
+        //font-size: 33px
         margin: 0
     .swiper-pagination
       display: flex
